added bibliography paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,6 +11,15 @@
   html={relativity.html}
 }
 
+@inproceedings{williams2023koopman,
+  title={A Koopman-Based Reduced-Order Observer using Measurable Visual Image Observables},
+  author={Williams, Jadal and Asada, Haruhiko Harry},
+  booktitle={Imaging Systems and Applications},
+  pages={ITh2E--5},
+  year={2023},
+  organization={Optica Publishing Group}
+  selected={true}
+}
 @book{einstein1956investigations,
   bibtex_show={true},
   title={Investigations on the Theory of the Brownian Movement},
@@ -57,7 +66,7 @@
   video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
   additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
   annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
+  selected={false},
   inspirehep_id = {3255}
 }
 
