--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,3 +12,15 @@
   organization={Optica Publishing Group},
   selected={true}
 }
+
+@article{williams2026effects,
+author = {Jadal Williams and Tim Poux-Guillaume and AE Hosoi},
+title ={Effects of variable pose input on neural network model performance for classifying basketball player activity},
+selected={true}
+journal = {Journal of Sports Analytics},
+volume = {12},
+number = {},
+pages = {22150218261419241},
+year = {2026},
+doi = {10.1177/22150218261419241},
+}
