Forgot to add comma to bibliography

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,7 +16,7 @@
 @article{williams2026effects,
   author = {Jadal Williams and Tim Poux-Guillaume and AE Hosoi},
   title ={Effects of variable pose input on neural network model performance for classifying basketball player activity},
-  selected={true}
+  selected={true},
   journal = {Journal of Sports Analytics},
   volume = {12},
   number = {},
